[package]
name = "ipc-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "52.2.0", features = ["ipc_compression", "prettyprint"] }
arrow-schema = { version = "52.2.0", features = ["serde"] }
tokio = { version ="1", features = ["full"]}
